# python-em511

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.MD  LICENSE  README.md  SECURITY.md  VERSION  pyproject.toml
.github/: dependabot.yml
.github/.workflows/: scorecard.yaml
.github/workflows/: codeql.yml  conventional-commit.yml  dco.yaml  dco.yml  dependabot-automerging.yml  dependency-review.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pyright.yml  pytest.yml  release-please.yml  ruff.yml  scorecard.yaml
src/em511/: __init__.py  em511.py  em511.pyi  test_em511.py  test_hello.py
src/python_em511/: __init__.py
