[project]
name = "python-em511"
version = "0.0.1"
description = "Driver for Carlo Gavazzi EM511 Series Single Phase Energy Meters using Modbus RTU"
readme = "README.md"
authors = [
    { name = "Mirza Krak", email = "mirza@mkrak.org" }
]
requires-python = ">=3.12"
dependencies = [
    "pymodbus>=3.11"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]
