[project]
name = "python-em511"
version = "0.0.1"
description = "Driver for Carlo Gavazzi EM511 Series Single Phase Energy Meters using Modbus RTU"
readme = "README.md"
authors = [
    { name = "Mirza Krak", email = "mirza@mkrak.org" }
]
requires-python = ">=3.10"
dependencies = [
    "pymodbus>=3.11"
]
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
include = ["src/em511"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "COM812",  # in conflict with formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"
