[project]
name = "python-em511"
dynamic = ["version"]
description = "Driver for Carlo Gavazzi EM511 Series Single Phase Energy Meters using Modbus RTU"
readme = "README.md"

license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Mirza Krak", email = "mirza@mkrak.org" },
    { name = "Bobo Bäck Engström", email = "bobo@id8-engineering.io"},
    { name = "Milad Makdesi", email = "milad@id8-engineering.io"},
]
maintainers = [
    { name = "Mirza Krak", email = "mirza@mkrak.org" },
    { name = "Bobo Bäck Engström", email = "bobo@id8-engineering.io"},
    { name = "Milad Makdesi", email = "milad@id8-engineering.io"},
]
requires-python = ">=3.10"
dependencies = [
    "pymodbus[serial]>=3.11"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Embedded Systems",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/em511"]

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "(?P<version>.*)"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "COM812",  # in conflict with formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"
